test/cli/test/mutate-with-target/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kyverno-test.yaml
policies:
- policy.yaml
resources:
- resources.yaml
results:
- kind: Deployment
  patchedResource: patchedResource1.yaml
  policy: update-image-tag
  rule: update-image-tag-rule
  resources:
  - deployment01
  result: pass
